# async-bash-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  pyproject.toml  release
.github/workflows/: release.yaml  test.yaml
legacy/examples/: demo.py
scripts/: release.sh  test_all.sh  test_list.sh  test_poll.sh  test_spawn.sh  test_terminate.sh
src/: lib.rs  logging.rs  main.rs  process.rs  server.rs  validation.rs
src/async_bash_mcp/: __init__.py
tests/: test_async_bash_mcp.py
