[package]
name = "async-bash-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "async-bash-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
